First Commit for Color Scheme Change
First Commit for Color Scheme Change

--- a/ClotheOurKids.Web/Content/css/kidsSkin.css
+++ b/ClotheOurKids.Web/Content/css/kidsSkin.css
@@ -9,7 +9,9 @@
 
 
 .kids-skin {
-  /* Select colors */ }
+  /* Select colors */ 
+    background-color: #fffbdc;
+                                    }
   .kids-skin .gradient {
     background: #ababab;
     background: -webkit-linear-gradient(315deg, #ababab 0%, #fff 100%);
