--- a/ClotheOurKids.Web/Views/Home/Index.cshtml
+++ b/ClotheOurKids.Web/Views/Home/Index.cshtml
@@ -29,7 +29,7 @@
             .navContainer {
                 position: static;
                 border: 0;
-                margin-bottom: 5px;
+                /*margin-bottom: 5px;*/
             }
         }
 
@@ -96,33 +96,33 @@
 
         @@media (max-width: 1199px) and (min-width: 992px) {
             .view {
-                height: calc(100vh - 125px);
+                height: calc(100vh - 122px);
             }
 
             #map-canvas {
-                top: 125px;
-                height: calc(100vh - 125px);
+                top: 122px;
+                height: calc(100vh - 122px);
             }
 
             #mainLogo {
                 /*top: 125px;*/
-                top: calc(((100vh - 125px) / 3))
+                top: calc(((100vh - 122px) / 3))
             }
         }
 
         @@media (max-width: 992px) {
             .view {                
-                height: calc(100vh - 163px);
+                height: calc(100vh - 156px);
             }
 
             #map-canvas {
-                top: 162px;
-                height: calc(100vh - 162px);
+                top: 156px;
+                height: calc(100vh - 156px);
             }
 
             #mainLogo {
                 /*top: 162px;*/
-                top: calc(((100vh - 162px) / 3))
+                top: calc(((100vh - 156px) / 3))
             }
         }
 
