--- a/ClotheOurKids.Web/Views/Shared/_Layout.cshtml
+++ b/ClotheOurKids.Web/Views/Shared/_Layout.cshtml
@@ -54,7 +54,7 @@
 
         <header>
 
-            <div class="container-fluid navContainer mt-sm-1 mb-sm-1 d-flex justify-content-lg-center">
+            <div class="container-fluid navContainer d-flex justify-content-lg-center">
                 <div class="row align-items-center headerPad justify-content-lg-center">
                     <div class="column-one d-lg-flex">
 
