--- a/ClotheOurKids.Web/Content/css/style.css
+++ b/ClotheOurKids.Web/Content/css/style.css
@@ -111,9 +111,9 @@ body, h1, h2, h3, h4, h5, h6 {
 }
 
 @media(max-width: 1199px) {
-    .navContainer {
+    /*.navContainer {
         margin-bottom: 5px;
-    }
+    }*/
 }
 
 
