--- a/ClotheOurKids.Web/Content/css/style.css
+++ b/ClotheOurKids.Web/Content/css/style.css
@@ -1,8 +1,3 @@
-body, h1, h2, h3, h4, h5, h6 {
-    font-weight: 400;
-}
-
-
 
 .block-text {
     line-height: 2;
@@ -15,6 +10,16 @@ body, h1, h2, h3, h4, h5, h6 {
 .lead {
     font-size: 1.5rem;
     font-weight: 500;
+}
+
+.section-wide {
+    padding-right: -15px;
+    padding-left: -15px;
+}
+
+.section-description {
+    text-align:left;
+    color: inherit;
 }
 
 
