--- a/ClotheOurKids.Web/Views/OurWork/OurWork.cshtml
+++ b/ClotheOurKids.Web/Views/OurWork/OurWork.cshtml
@@ -12,14 +12,11 @@
     
 }
 
-<div class="container">
-    <section class="section page-top-section mb-5 wow fadeIn" data-wow-delay="0.2s">
+<div class="container-fluid bg-blue">
+    <section class="section page-top-section pb-4 wow fadeIn" data-wow-delay="0.2s">
         <div class="row">
-            <div class="col-12">
-                <h1 class="section-heading mb-2">Our Work</h1>
-            </div>
-            <div class="col-12">
-                <p class="section-description mb-2"><i><strong>Giving</strong> clothes. <strong>Showing</strong> love. <strong>Building</strong> confidence.</i></p>
+            <div class="col-12 mt-3">
+                <h1 class="section-heading white-text mb-2">Our Work</h1>
             </div>
             <div class="col-12 flex-center">
                 <span class="mt-1">Share</span>
@@ -48,12 +45,12 @@
         <p class="section-description lead wow fadeIn" data-wow-delay="0.2s">We have a simple process to get clothing and hygiene items into the hands of kids who need them</p>
 
         <div class="row mb-1 text-center">
-            <div class="col bg-red white-text mr-2 ml-2 ml-sm-0">
-                <h4 class="mt-5">Collect</h4>
+            <div class="col bg-orange white-text mr-2 ml-2 ml-sm-0">
+                <h4 class="white-text mt-5">Collect</h4>
                 <p class="white-text mb-5">We rely 100% on your clothing and financial donations to ensure we can provide for all of the kids who need our help.</p>
             </div>
             <div class="col bg-purple mr-2 mr-sm-0">
-                <h4 class="mt-5">Sort</h4>
+                <h4 class="white-text mt-5">Sort</h4>
                 <p class="white-text mb-5">
                     We inspect all of the apparel that we collect for stains, holes, or excessive wear and keep only the items that a child can wear with confidence.
                 </p>
@@ -70,17 +67,17 @@
             </div>
         </div>
     </section>
-    <!--/Section: Our Process-->
+    <!--/Section: Our Process-->  
+</div>
 
-    <hr class="between-sections">
-
+<div class="container-fluid bg-purple">
     <!--Section: Whats In A Bag-->
     <section class="section">
 
         <!--Section heading-->
-        <h1 class="section-heading wow fadeIn" data-wow-delay="0.2s">What's In The Bag</h1>
+        <h1 class="section-heading white-text pt-5 wow fadeIn" data-wow-delay="0.2s">What's In The Bag</h1>
         <!--Section description-->
-        <p class="section-description wow fadeIn" data-wow-delay="0.4s">
+        <p class="section-description white-text wow fadeIn" data-wow-delay="0.4s">
             We know that the children we help may have different clothing needs.
             Many children will be starting with <strong>nothing</strong> that fits them.
             Many will have <strong>nothing</strong> they feel confident wearing to school.
@@ -100,7 +97,7 @@
                     <!--Card image-->
                     <div class="view zoom">
                         <img src="~/Content/img/shirt.jpg" class="img-fluid" alt="" />
-                        
+
                         <div class="stripe dark">
                             <a>
                                 <p>5+ Tops</p>
@@ -119,7 +116,7 @@
                     <!--Card image-->
                     <div class="view zoom">
                         <img src="~/Content/img/jeans.jpeg" class="img-fluid" alt="" />
-                        
+
                         <div class="stripe light">
                             <a>
                                 <p>5+ Bottoms</p>
@@ -139,12 +136,12 @@
                     <!--Card image-->
                     <div class="view zoom">
                         <img src="~/Content/img/underwear.jpeg" class="img-fluid" alt="" />
-                        
+
                         <div class="stripe dark">
                             <a>
                                 <p>6+ Undies</p>
                             </a>
-                        </div>   
+                        </div>
                     </div>
                     <!--/Card image-->
                 </div>
@@ -159,12 +156,12 @@
                     <!--Card image-->
                     <div class="view zoom">
                         <img src="~/Content/img/socks.jpeg" class="img-fluid" alt="" />
-                        
+
                         <div class="stripe light">
                             <a>
                                 <p>6+ Socks</p>
                             </a>
-                        </div>  
+                        </div>
                     </div>
                     <!--/Card image-->
                 </div>
@@ -179,12 +176,12 @@
                     <!--Card image-->
                     <div class="view zoom">
                         <img src="~/Content/img/shoes.jpg" class="img-fluid" alt="" />
-                        
+
                         <div class="stripe dark">
                             <a>
                                 <p>1-2 Shoes</p>
                             </a>
-                        </div> 
+                        </div>
                     </div>
                     <!--/Card image-->
                 </div>
@@ -199,12 +196,12 @@
                     <!--Card image-->
                     <div class="view zoom">
                         <img src="~/Content/img/coat.jpg" class="img-fluid" alt="" />
-                        
+
                         <div class="stripe light">
                             <a>
                                 <p>Coat</p>
                             </a>
-                        </div>                       
+                        </div>
                     </div>
                     <!--/Card image-->
                 </div>
@@ -219,12 +216,12 @@
                     <!--Card image-->
                     <div class="view zoom">
                         <img src="~/Content/img/toothbrush_blue.jpeg" class="img-fluid" alt="" />
-                        
+
                         <div class="stripe dark">
                             <a>
                                 <p>Hygiene Kit</p>
                             </a>
-                        </div>    
+                        </div>
                     </div>
                     <!--/Card image-->
                 </div>
@@ -235,9 +232,9 @@
         <!--/First row-->
 
     </section>
+</div>
 
-    <hr class="between-sections">
-
+<div class="container-fluid">
     <!--Section: Who We Help-->
     <section class="section">
         <!--Section heading-->
@@ -371,18 +368,18 @@
         </div>
         <!--/First row-->
 
-        <p class="section-description wow fadeIn" data-wow-delay="0.2s">
+        <p class="section-description mt-4 wow fadeIn" data-wow-delay="0.2s">
             We want to help kids in each of these situations by giving them clothing that fits well, is lightly used or new, and is appropriate for school.
             We rely on school officials or other child advocate organizations to contact us on behalf of the children so that we can protect the child’s anonymity.
         </p>
     </section>
     <!--/Section: Who We Help-->
+</div>
 
-    <hr class="between-sections">
-
+<div class="container-fluid bg-green pb-4">
     <!--Section: How We Operate-->
     <section class="section">
-        <h1 class="section-heading wow fadeIn" data-wow-delay="0.2s">How We Operate</h1>
+        <h1 class="section-heading pt-5 wow fadeIn" data-wow-delay="0.2s">How We Operate</h1>
 
         <h3 class="h3-responsive wow fadeIn" data-wow-delay="0.2s">Closed to Public</h3>
         <p class="section-description wow fadeIn" data-wow-delay="0.2s" style="text-align: left; margin-left: 0px; margin-right: 0px;">We are unique because we are <strong>closed</strong> to the <strong>public</strong>. We operate through local schools and other organizations by receiving requests from teachers, counselors, principals, or other child advocates.<p>
